[package]
name = "headtail"
version = "0.3.0"
edition = "2021"
description = "head and tail simultaneously"
homepage = "https://github.com/CleanCut/headtail"
repository = "https://github.com/CleanCut/headtail"
readme = "README.md"
keywords = [ "head", "tail", "trim", "stdout", "file" ]
categories = [ "command-line-utilities" ]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
thiserror = "1.0.35"
