[package]
name = "headtail"
version = "0.3.1"
edition = "2021"
description = "head and tail simultaneously"
homepage = "https://github.com/CleanCut/headtail"
repository = "https://github.com/CleanCut/headtail"
readme = "README.md"
keywords = [ "head", "tail", "trim", "stdout", "file" ]
categories = [ "command-line-utilities" ]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = [ "derive" ] }
crossbeam-channel = "0.5.6"
env_logger = "0.9.1"
log = "0.4.17"
notify = "5.0.0"
thiserror = "1.0.35"

[dev-dependencies]
tempfile = "3.3.0"
